deploy/k3s/staging/frontend-staging.yml
# k8s/staging/frontend-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      containers:
      - name: frontend
        image: sportek/minecraft-stats-frontend:staging
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "250m"
            memory: "256Mi"
            ephemeral-storage: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: staging
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
