deploy/k3s/staging/ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - staging.minecraft-stats.com
      - staging.minecraft-stats.fr
      secretName: minecraft-stats-staging-tls
  rules:
    - host: staging.minecraft-stats.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3333
    - host: staging.minecraft-stats.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3333
